# catapult

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  catapult.conf  daemon.conf  install.sh
files/: test_config.conf
src/: config.rs  filters.rs  inputs.rs  main.rs  outputs.rs  processor.rs
src/inputs/: mod.rs  network.rs  random.rs  stdin.rs
src/outputs/: elasticsearch.rs  file.rs  mod.rs  network.rs  stdout.rs
