[package]
name = "catapult"
version = "0.1.1"
authors = ["Pierre Baillet <pierre@baillet.name>"]

description = "Catapult sends you logs elsewhere"
keyworkds = ["network", "logs", "shipping", "logstash"]
readme = "README.md"
license= "MIT"
documentation = "http://people.zoy.org/~oct/public/doc/catapult/inputs/index.html"
repository = "https://github.com/octplane/catapult"
homepage = "https://github.com/octplane/catapult"

[dependencies]

serde = "*"
chrono = "*"
hyper = "*"
url = "*"
nom = "*"
docopt = "*"
time = "*"
