[package]
authors = ["Pierre Baillet <pierre@baillet.name>"]
description = "Catapult sends you logs elsewhere"
documentation = "http://people.zoy.org/~oct/public/doc/catapult/inputs/index.html"
homepage = "https://github.com/octplane/catapult"
keywords = ["network", "logs", "shipping", "logstash"]
name = "catapult"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/octplane/catapult"
version = "0.1.2"

[dependencies]
chrono = "0.2.16"
docopt = "0.6.74"
hyper = "0.6.15"
log = "0.3.6"
nom = "1.0.0"
rand = "0.3.11"
serde = "0.6.1"
serde_json = "0.8.3"
time = "0.1.33"
url = "0.2.37"
